src/test/ui/suggestions/assoc-const-as-field.stderr
error[E0423]: expected value, found struct `Mod::Foo`
  --> $DIR/assoc-const-as-field.rs:11:9
   |
LL |     foo(Mod::Foo.Bar);
   |         ^^^^^^^^ not a value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
